@@ -34,13 +34,6 @@ namespace GooglePlayServices
     public class PlayServicesResolver : AssetPostprocessor
     {
         /// <summary>
-        /// The name of the current resolver.
-        /// </summary>
-        /// <remarks>
-        /// This should be updated when a new revision is created.
-        /// </remarks>
-        private static string CurrentResolverName = "ResolverVer1_1";
-        /// <summary>
         /// The instance to the play services support object.
         /// </summary>
         private static PlayServicesSupport svcSupport;
@@ -79,6 +72,7 @@ namespace GooglePlayServices
             {
                 _resolver = resolverImpl;
             }
+            Debug.Log("Resolver version is now: " + _resolver.Version());
             return _resolver;
         }
 
@@ -86,15 +80,10 @@ namespace GooglePlayServices
         /// Gets the resolver.
         /// </summary>
         /// <value>The resolver.</value>
-        static IResolver Resolver
+        public static IResolver Resolver
         {
             get
             {
-                if (_resolver == null)
-                {
-                    // create the latest resolver known.
-                    _resolver = Activator.CreateInstance("GooglePlayServices", CurrentResolverName) as IResolver;
-                }
                 return _resolver;
             }
         }
@@ -154,7 +143,7 @@ namespace GooglePlayServices
         /// <returns><c>true</c>, if overwrite confirmation was handled, <c>false</c> otherwise.</returns>
         /// <param name="oldDep">Old dependency.</param>
         /// <param name="newDep">New dependency replacing old.</param>
-        static bool HandleOverwriteConfirmation(Dependency oldDep, Dependency newDep)
+        public static bool HandleOverwriteConfirmation(Dependency oldDep, Dependency newDep)
         {
             // Don't prompt overwriting the same version, just do it.
             if (oldDep.BestVersion != newDep.BestVersion)
