@@ -4,6 +4,9 @@ UA Unity ChangeLog
 Version 2.3.0 - June 24, 2016
 =============================
  - Updated Urban Airship Android library to 7.2.0
+ - Updated the JarResolver dependency to 1.2.0
+ - Removed the Android Application override. Existing installations may need to
+   remove the UrbanAirshipApplication entry from Assets/Plugins/Android/AndroidManifest.xml.
 
 Version 2.2.0 - June 2, 2016
 ============================
